--- a/heshamAhmed.css
+++ b/heshamAhmed.css
@@ -1,4 +1,4 @@
-/* develope By Package +201002241591  3lwaaa@gmail.com - https://wa.me/201002241591 */
+/* develope By Package +201017129613  h456ad@gmail.com - https://wa.me/201017129613 */
 @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap'); @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"); .sicon-cart:before {
     content: "\f179";
     font-family: "Noto Kufi Arabic","bootstrap-icons"!important;
@@ -91,7 +91,7 @@ footer .store-certificate img {
 }
 
 section {
-    background: #fff!important
+    background-color: #fff!important
 }
 
 .u-white .container {
@@ -99,7 +99,7 @@ section {
 }
 
 .section-products .container {
-    background: #ffffff7a!important;
+    background-color: #ffffff7a!important;
     border: 1px solid #fff!important
 }
 
@@ -771,7 +771,7 @@ p.mb-4.mb-md-0 {
 }
 
 section {
-    background: #fff!important
+    background-color: #fff!important
 }
 
 span.sicon-instagram {
@@ -823,7 +823,7 @@ p.mb-4.mb-md-0 {
 }
 
 section {
-    background: #fff!important
+    background-color: #fff!important
 }
 
 .u-white .container {
@@ -832,7 +832,7 @@ section {
 
 .section-header .section--title span {
     color: var(--main-color);
-    background: #fff
+    background-color: #fff;
 }
 
 body.salla-theme_1 .section-header .btn.btn-primary.btn-rounded,body.salla-theme_2 .section-header .btn.btn-primary.btn-rounded,body.salla-theme_4 .section-header .btn.btn-primary.btn-rounded {
