--- a/heshamahmeddev.css
+++ b/heshamahmeddev.css
@@ -104,9 +104,10 @@ section.u-light.py-5.text-center {
   .category-grid>div:nth-child(4) {
     grid-column: unset !important;
 }
+@media (min-width:900px){
   .salla-theme_6 .category-grid>div .category-featured{
     height: 325px !important;
-  }
+	}}
   .products-listing.eq-height .slick-track{
    padding:10px;
   }
