--- a/heshamahmeddev.css
+++ b/heshamahmeddev.css
@@ -359,9 +359,9 @@ position: absolute;
     z-index: 111;
 }
 @media only screen and (max-width: 991px){
-.salla-theme_6 .category-grid>div .category-featured {
+/*.salla-theme_6 .category-grid>div .category-featured {
     height: 222px !important;
-}
+}*/
 h1.logo {
     overflow: hidden !important;
 }
