--- a/nemo.css
+++ b/nemo.css
@@ -1,4 +1,6 @@
 /* Add custom CSS styles below */
+/*create by hesham ahmed ==> 01017129613 || 01227728001 && https://wa.me/+201017129613 */
+
 .footer__block> :first-child {
     flex: 100% !important;
     width: 100% !important;
