--- a/hema.css
+++ b/hema.css
@@ -6377,3 +6377,6 @@ position: absolute;
     .store-notify {
     display: none;
 }
+.salla-theme_6 .product .product-footer .product-add.add_to_cart_btn {
+     padding: 10px 15px; 
+}
