--- a/dobamine.css
+++ b/dobamine.css
@@ -6,4 +6,8 @@
 a.product-add.add_to_cart_btn:before{
      display: none !important; 
 }
+    .section-header .section--title span{
+        color: #442e17 !important;
+
+    }
 }
